Almost final, but the CPU usage is very high and makes the app sloggy.

--- a/app/src/main/res/drawable/fuel.xml
+++ b/app/src/main/res/drawable/fuel.xml
@@ -7,7 +7,7 @@
         android:pathData="m27.5,1.7 l0,9.34 -0.05,0.02 0.02,0 0.03,-0.02 32.83,0.21 0.07,-9.48C49.43,1.75 43.31,1.72 27.5,1.7ZM27.48,11.06 L19.47,16.02 15.92,10.58a1.8,6.46 59.01,0 0,-0.05 -0.14l-0,-0.01a1.8,6.46 59.01,0 0,-0.71 -0.33,1.8 6.46,59.01 0,0 -5.76,2.13 1.8,6.46 59.01,0 0,-4.6 4.86,1.8 6.46,59.01 0,0 0.29,0.23l3.52,5.4 4.86,-2.96 -11.54,7.15 25.52,-0.06 0.07,0 31.52,-0.07 -57.11,0.2 -0.14,54.65 58.73,0 -0.07,-54.85 0.04,0 -0.07,-15.5 -32.92,-0.21z"
         android:fillAlpha="0.95"
         android:strokeColor="#000070"
-        android:fillColor="#04871a"
+        android:fillColor="#707471"
         android:strokeWidth="0.60000002"
         android:strokeAlpha="0.71"/>
     <path
@@ -21,7 +21,7 @@
         android:pathData="m40.9,55.81a9.87,9.67 0,0 1,-9.85 9.67,9.87 9.67,0 0,1 -9.88,-9.65 9.87,9.67 0,0 1,9.83 -9.69,9.87 9.67,0 0,1 9.9,9.62"
         android:fillAlpha="0.8"
         android:strokeColor="#000000"
-        android:fillColor="#4b4444"
+        android:fillColor="#2e2b2b"
         android:strokeWidth="0.27727988"
         android:strokeAlpha="0.71"/>
     <path
